tests/field/assign_variable_to_method.rev
struct Foo {
    fn foo() {}
}

var bar = 4

var f = Foo()

f.foo = bar // error: trying to assign value of type 'int' to variable of type 'fn() -> void'